[package]
authors = ["Ronan <ronan.bonnet42@wanadoo.fr>"]
edition = "2021"
readme = "README.md"
name = "herkulex-formation-td"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.7"
cortex-m = "0.6.2"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
drs-0x01 = "0.3.0"
herkulex-drs-0x01-stm32f1xx = "0.1.1"

[[bin]]
name = "herkulex-formation-td"


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies.stm32f1xx-hal]
version = "0.9"
features = ["stm32f103", "rt", "medium", "has-can"]